Display error code when logRotate is unable to rename log file

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.2.3, 2.3.2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the rename operation fails in a logRotate, we print the 'from' and 'to' filenames but not the error code we got from the failing operation.

      The logged line is also missing an 'endl', so the Fatal Assertion that follows is logged on the same line.

            Assignee:
            Tad Marshall
            Reporter:
            Tad Marshall
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: