SERVER-7869 Report errno and description on file rename failure

Also report target filename on rename failure at startup, add
missing 'endl' to logRotate rename failure log line.